fix: footer z-index

--- a/css/style.css
+++ b/css/style.css
@@ -774,6 +774,9 @@ footer{
     color: white;
     font-size:1em;
     padding: 30px 0 0 0;
+
+    position:relative;
+    z-index: 2;
 }
 
 footer .footer_inner{
